--- a/tauri-app/package.json
+++ b/tauri-app/package.json
@@ -20,6 +20,7 @@
     "@web5/api": "^0.8.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.298.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -38,6 +39,7 @@
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1.5.7",
+    "@types/lodash": "^4.14.202",
     "@types/node": "^20.10.5",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
