--- a/tauri-app/package.json
+++ b/tauri-app/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@tauri-apps/api": "^1.5.2",
     "@web5/api": "^0.8.3",
+    "axios": "^1.6.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "lodash": "^4.17.21",
