--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -5,6 +5,7 @@
     "noImplicitAny": true,
     "noFallthroughCasesInSwitch": true,
     "module": "CommonJS",
+    "target": "ES2020",
     "baseUrl": ".",
     "paths": {
       "@backend/*": ["./src/*"],
@@ -12,7 +13,7 @@
     }
   },
   "include": [
-    "server.ts",
+    "*.ts",
     "./src/**/*.ts"
   ],
   "exclude": [
