--- a/tauri-app/package.json
+++ b/tauri-app/package.json
@@ -29,6 +29,7 @@
     "react-dropzone": "^14.2.3",
     "react-easy-crop": "^5.0.4",
     "react-hook-form": "^7.49.2",
+    "react-hot-toast": "^2.4.1",
     "react-pdf": "^7.6.0",
     "react-router-dom": "^6.21.1",
     "react-spinners": "^0.13.8",
