--- a/tauri-app/package.json
+++ b/tauri-app/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.6.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "date-fns": "^3.1.0",
     "hono": "^3.12.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.298.0",
