--- a/tauri-app/package.json
+++ b/tauri-app/package.json
@@ -34,6 +34,7 @@
     "react-pdf": "^7.6.0",
     "react-router-dom": "^6.21.1",
     "react-spinners": "^0.13.8",
+    "react-toastify": "^9.1.3",
     "react-virtualized-auto-sizer": "^1.0.20",
     "react-window": "^1.8.10",
     "tailwind-merge": "^2.1.0",
